# monarch

./: .gitmodules  LICENSE  README.md
common/: controller.sh  get-run-dir.sh  (+1 more)
monarch/: BUILD  CMakeLists.txt  LICENSE  WORKSPACE  setup.py
monarch/binding/: BUILD  module_binding.cpp
monarch/protos/: controller_service.proto
monarch/src/: main.cpp
monarch/src/control_plane/: control_application.cpp  control_application.h  controller_service_impl.cpp  controller_service_impl.h  main.cpp
monarch/src/control_plane/instance_control/: dp_instance_session.h  group_session.cpp  group_session.h
monarch/src/control_plane/metadata/: metadata_container.cpp  metadata_container.h
monarch/src/control_plane/parser/: configuration_parser.cpp  configuration_parser.h  control_configuration_parser.cpp  control_configuration_parser.h
monarch/src/control_plane/remote/: async_server.cpp  async_server.h  calls.h
monarch/src/data_plane/: data_plane.h  data_plane_instance.cpp  data_plane_instance.h  policies.h  types.h
monarch/src/data_plane/connectors/grpc/: bootstrap_client.h  remote_stage_builder.h
monarch/src/data_plane/connectors/pytorch_multiprocess/: us_client.cpp  us_client.h  us_server.h
monarch/src/data_plane/data_governance/metadata/: info.h  placed_state.h  prefetched_state.h
monarch/src/data_plane/data_governance/metadata/file_descriptor_states/: file_descriptors_state.h  shareable_file_descriptors_state.h  single_file_descriptors_state.h
monarch/src/data_plane/data_governance/payload/: file.h
monarch/src/data_plane/data_governance/services/: list_transforms.cpp  list_transforms.h  metadata_container_service.cpp  metadata_container_service.h  metadata_container_service_builder.cpp  metadata_container_service_builder.h  transparent_metadata_container_service.h
monarch/src/data_plane/data_governance/services/file_descriptors_managers/: shareable_file_descriptors_manager.h
monarch/src/data_plane/handlers/: control_handler.cpp  control_handler.h  control_handler_builder.cpp  control_handler_builder.h
monarch/src/data_plane/handlers/eviction_handlers/: eviction_handler.cpp  single_thread_eviction_handler.cpp  single_thread_eviction_handler.h
monarch/src/data_plane/handlers/placement_handlers/: placement_handler.cpp  placement_handler.h
monarch/src/data_plane/interfaces/intrusive/: imonarch.cpp  imonarch.h  intrusive_stage.h  intrusive_stage_impl.h
monarch/src/data_plane/interfaces/transparent/: posix_file_system.cpp  posix_file_system.h  transparent_posix_interface.h
monarch/src/data_plane/metadata/: file.cpp  file_info.cpp  file_info.h  list_transforms.h  metadata_container_service.cpp  metadata_container_service.h  placed_file_info.h  prefetched_file.h  strict_file_info.cpp  strict_file_info.h
monarch/src/data_plane/parser/: configuration_parser.cpp  configuration_parser.h
monarch/src/data_plane/prefetching/: prefetch_data_plane.cpp  prefetch_data_plane.h  prefetch_data_plane_builder.cpp  prefetch_data_plane_builder.h
monarch/src/data_plane/remote/: bootstrap_client.h  remote_stage_builder.cpp  remote_stage_builder.h
monarch/src/data_plane/remote/pytorch_multiprocess/: us_client.cpp  us_client.h  us_server.cpp
monarch/src/data_plane/root/: hierarchical_data_plane.cpp  hierarchical_data_plane.h  hierarchical_data_plane_builder.cpp  hierarchical_data_plane_builder.h
monarch/src/data_plane/root/profiling/: profiler.cpp  profiler.h  profiler_proxy.cpp  profiler_proxy.h  stats.cpp  stats.h
monarch/src/data_plane/root/rate_limiting/: client_watch_rate_limiter.cpp  rate_limiter.cpp
monarch/src/data_plane/root/storage_drivers/: data_storage_driver.cpp  data_storage_driver.h  data_storage_driver_builder.cpp  file_system_driver.cpp  file_system_driver.h  ph_memory_buffer_driver.cpp  ph_memory_buffer_driver.h  tbb_memory_buffer_driver.cpp  tbb_memory_buffer_driver.h
monarch/src/data_plane/stages/: monarch.cpp  monarch.h  monarch_builder.cpp  monarch_builder.h  stage.h
monarch/src/data_plane/stages/hierarchical/: hierarchical_stage.cpp  hierarchical_stage.h  hierarchical_stage_builder.h
monarch/src/data_plane/utils/: status.h
monarch/src/data_plane/utils/logging/: logger.h  singleton_logger.cpp  singleton_logger.h
monarch/src/data_plane/utils/profiling/: profiler.h  profiler_proxy.cpp  profiler_proxy.h  profiling_service.h  stats.h  treated_stats.h
monarch/src/data_plane/utils/rate_limiting/: client_watch_rate_limiter.h  rate_limiter.h
monarch/src/helpers/: logger.cpp  logger.h
monarch/src/tests/: test_class.cpp  test_class.h  transparent_mmap.cpp  transparent_test.cpp
pastor/: BUILD  CMakeLists.txt  WORKSPACE
pastor/binding/: module_binding.cpp
pastor/src/: main.cpp
pastor/src/control_plane/instance_control/: dp_instance_session.cpp
pastor/src/control_plane/metadata/: metadata_container.cpp
pastor/src/control_plane/parser/: control_configuration_parser.h
pastor/src/control_plane/remote/: calls.h
pastor/src/data_plane/interfaces/intrusive/: imonarch.cpp  imonarch.h
pastor/src/data_plane/interfaces/transparent/: posix_file_system.cpp  posix_file_system.h  tmonarch.h
pastor/src/data_plane/logic/: data_plane.h
pastor/src/data_plane/logic/handlers/: control_handler.cpp  control_handler.h  control_handler_builder.h
pastor/src/data_plane/logic/metadata/: file.h  file_info.cpp  file_info.h  metadata_container_service.cpp  metadata_container_service.h  placed_file_info.h  prefetched_file.cpp
pastor/src/data_plane/logic/parser/: configuration_parser.cpp  configuration_parser.h
pastor/src/data_plane/logic/prefetching/: prefetch_data_plane.cpp  prefetch_data_plane.h  prefetch_data_plane_builder.cpp  prefetch_data_plane_builder.h
pastor/src/data_plane/logic/remote/: bootstrap_client.h  remote_stage_builder.cpp  remote_stage_builder.h
pastor/src/data_plane/logic/root/: hierarchical_data_plane.cpp  hierarchical_data_plane.h  hierarchical_data_plane_builder.cpp  hierarchical_data_plane_builder.h
pastor/src/helpers/: logger.h
pastor/src/tests/: test_class.cpp  test_class.h  transparent_mmap.cpp  transparent_test.cpp
(+125 files in other folders)
